<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="Check Issued Books">
        <menu>
            <item
                android:title="By Book No."
                android:id="@+id/bookno"/>
            <item
                android:title="By Emp Id"
                android:id="@+id/empid"/>
        </menu>
    </item>
    <item
        android:id="@+id/reset"
        android:title="Reset" />
    <item
        android:id="@+id/generateQRCode"
        android:title="GenerateQRCode"/>
    <item
        android:id="@+id/KeepNotes"
        android:title="KeepNotes">


    </item>
    <item
        android:id="@+id/signout"
        android:title="Sign Out" />

</menu>